--- a/FinalProjectFrontEnd/index.html
+++ b/FinalProjectFrontEnd/index.html
@@ -80,7 +80,7 @@
             <div class="center-nav">
                 <ul>
                     <li class="nav-li">
-                        <a href="">Sale</a>
+                        <a href="sale.html">Sale</a>
                         <hr class="mobile-hr">
                     </li>
                     <li class="nav-li">
@@ -519,8 +519,7 @@
                 <input type="text" placeholder="NAME">
                 <p>EMAIL<span> *</span> </p>
                 <input class="email-input" type="email" placeholder="EMAIL">
-                <a href="">SEND</a>
-
+                <a class="send-button" href="">SEND</a>
             </div>
         </div>
        </div>
@@ -609,7 +608,7 @@
                   <a href="#!" class="text-reset">Order Status</a>
                 </p>
                 <p>
-                  <a href="#!" class="text-reset">Shipping</a>
+                  <a href="shipping.html" class="text-reset">Shipping</a>
                 </p>
                 
               </div>
