--- a/FinalProjectFrontEnd/index.html
+++ b/FinalProjectFrontEnd/index.html
@@ -489,7 +489,7 @@
                 <div class="blue-hp-support">
                     <p>Sign up & get 10% off your next order + the best deals straight to your phone!</p>
                     <input type="text" placeholder="Enter your Email Adress...">
-                    <a href="">Sign Up</a>
+                    <button class="send-button">SIGN UP</button>
                 </div>
             </div>
         </div>
@@ -519,7 +519,7 @@
                 <input type="text" placeholder="NAME">
                 <p>EMAIL<span> *</span> </p>
                 <input class="email-input" type="email" placeholder="EMAIL">
-                <a class="send-button" href="">SEND</a>
+                <button class="send-button">SEND</button>
             </div>
         </div>
        </div>
