--- a/FinalProjectFrontEnd/login.html
+++ b/FinalProjectFrontEnd/login.html
@@ -169,7 +169,7 @@
                 <div class="blue-hp-support">
                     <p>Sign up & get 10% off your next order + the best deals straight to your phone!</p>
                     <input type="text" placeholder="Enter your Email Adress...">
-                    <a href="">Sign Up</a>
+                    <button class="send-button">SIGN UP</button>
                 </div>
             </div>
         </div>
