--- a/FinalProjectFrontEnd/eyeglasses.html
+++ b/FinalProjectFrontEnd/eyeglasses.html
@@ -118,7 +118,7 @@
 
    <section id="sale-head-photo">
         <div class="container">
-            <img src="assets/photos/shop-home-photo/6cc5db85df435323f28fe8aea37c6a6f_1200x.progressive.png" alt="">
+            <img src="assets/photos/shop-home-photo/eyeglasses.png" alt="">
             <p>As if the ShadesDaddy deals couldn’t get any bigger, our Clearance section is here! With massive savings on top brand sunglasses and eyeglasses, look no further for the best men’s and women’s frames at incredibly affordable prices!</p>
         </div>
    </section>
