new commit video

--- a/FinalProjectFrontEnd/newarrivals.html
+++ b/FinalProjectFrontEnd/newarrivals.html
@@ -204,17 +204,18 @@
                               <div class="col-lg-4 col-md-4 col-sm-6 col-6">
                                 <div class="box">
                                     <a href="">
-                                        <img class="img-fluid" src="assets/photos/products/sunglasses/sun-2.avif" alt=""></div>
-                                    <div class="product-detail">
+                                        <img class="img-fluid" src="assets/photos/products/sunglasses/sun-2.png" alt="">
+                                        <div class="product-detail">
                                         <p><a href="">Versace</a></p>
                                         <p>from <span class="span-red">243$</span> <span class="old-price">359$</span></p>
-                                    </div>
+                                        </div>
                                     </a>
-                              </div>
+                                </div>
+                                </div>
                               <div class="col-lg-4 col-md-4 col-sm-6 col-6">
                                 <div class="box">
                                     <a href="">
-                                        <img class="img-fluid"  src="assets/photos/products/sunglasses/sun-3.avif" alt="">
+                                        <img class="img-fluid"  src="assets/photos/products/sunglasses/sun-3.png" alt="">
                                     <div class="product-detail">
                                         <p><a href="">Versace</a></p>
                                         <p>from <span class="span-red">243$</span> <span class="old-price">359$</span></p>
@@ -225,7 +226,7 @@
                               <div class="col-lg-4 col-md-4 col-sm-6 col-6">
                                 <div class="box">
                                     <a href="">
-                                        <img class="img-fluid" src="assets/photos/products/sunglasses/sun-4.avif" alt="">
+                                        <img class="img-fluid" src="assets/photos/products/sunglasses/sun-4.png" alt="">
                                     <div class="product-detail">
                                         <p><a href="">Versace</a></p>
                                         <p>from <span class="span-red">243$</span> <span class="old-price">359$</span></p>
@@ -236,7 +237,7 @@
                               <div class="col-lg-4 col-md-4 col-sm-6 col-6">
                                 <div class="box">
                                     <a href="">
-                                        <img class="img-fluid" src="assets/photos/products/sunglasses/sun-5.avif" alt="">
+                                        <img class="img-fluid" src="assets/photos/products/sunglasses/sun-5.png" alt="">
                                         <div class="product-detail">
                                             <p><a href="">Versace</a></p>
                                             <p>from <span class="span-red">243$</span> <span class="old-price">359$</span></p>
@@ -247,7 +248,7 @@
                               <div class="col-lg-4 col-md-4 col-sm-6 col-6">
                                 <div class="box">
                                     <a href="">
-                                        <img class="img-fluid" src="assets/photos/products/sunglasses/sun-6.avif" alt="">
+                                        <img class="img-fluid" src="assets/photos/products/sunglasses/sun-6.png" alt="">
                                     <div class="product-detail">
                                         <p><a href="">Versace</a></p>
                                         <p>from <span class="span-red">243$</span> <span class="old-price">359$</span></p>
@@ -258,7 +259,7 @@
                               <div class="col-lg-4 col-md-4 col-sm-6 col-6">
                                 <div class="box">
                                     <a href="">
-                                        <img class="img-fluid" src="assets/photos/products/sunglasses/sun-7.avif" alt="">
+                                        <img class="img-fluid" src="assets/photos/products/sunglasses/sun-7.png" alt="">
                                     <div class="product-detail">
                                         <p><a href="">Versace</a></p>
                                         <p>from <span class="span-red">243$</span> <span class="old-price">359$</span></p>
@@ -269,7 +270,7 @@
                               <div class="col-lg-4 col-md-4 col-sm-6 col-6">
                                 <div class="box">
                                     <a href="">
-                                        <img class="img-fluid" src="assets/photos/products/sunglasses/sun-8.avif" alt="">
+                                        <img class="img-fluid" src="assets/photos/products/sunglasses/sun-8.png" alt="">
                                      <div class="product-detail">
                                         <p><a href="">Versace</a></p>
                                         <p>from <span class="span-red">243$</span> <span class="old-price">359$</span></p>
@@ -280,7 +281,7 @@
                               <div class="col-lg-4 col-md-4 col-sm-6 col-6">
                                 <div class="box">
                                     <a href="">
-                                        <img class="img-fluid" src="assets/photos/products/sunglasses/sun-9.avif" alt="">
+                                        <img class="img-fluid" src="assets/photos/products/sunglasses/sun-9.png" alt="">
                                     <div class="product-detail">
                                         <p><a href="">Versace</a></p>
                                         <p>from <span class="span-red">243$</span> <span class="old-price">359$</span></p>
@@ -291,7 +292,7 @@
                               <div class="col-lg-4 col-md-4 col-sm-6 col-6">
                                 <div class="box">
                                     <a href="">
-                                        <img class="img-fluid" src="assets/photos/products/sunglasses/sun-10.avif" alt="">
+                                        <img class="img-fluid" src="assets/photos/products/sunglasses/sun-10.png" alt="">
                                     <div class="product-detail">
                                         <p><a href="">Versace</a></p>
                                         <p>from <span class="span-red">243$</span> <span class="old-price">359$</span></p>
@@ -302,7 +303,7 @@
                               <div class="col-lg-4 col-md-4 col-sm-6 col-6">
                                 <div class="box">
                                    <a href="">
-                                    <img class="img-fluid" src="assets/photos/products/sunglasses/sun-11.avif" alt="">
+                                    <img class="img-fluid" src="assets/photos/products/sunglasses/sun-11.png" alt="">
                                     <div class="product-detail">
                                        <p><a href="">Versace</a></p>
                                        <p>from <span class="span-red">243$</span> <span class="old-price">359$</span></p>
@@ -313,7 +314,7 @@
                               <div class="col-lg-4 col-md-4 col-sm-6 col-6">
                                 <div class="box">
                                     <a href="">
-                                        <img class="img-fluid" src="assets/photos/products/sunglasses/sun-12.avif" alt="">
+                                        <img class="img-fluid" src="assets/photos/products/sunglasses/sun-12.png" alt="">
                                      <div class="product-detail">
                                         <p><a href="">Versace</a></p>
                                         <p>from <span class="span-red">243$</span> <span class="old-price">359$</span></p>
@@ -324,7 +325,7 @@
                               <div class="col-lg-4 col-md-4 col-sm-6 col-6">
                                 <div class="box">
                                     <a href="">
-                                        <img class="ig-fluide" src="assets/photos/products/sunglasses/sun-13.avif" alt="">
+                                        <img class="ig-fluide" src="assets/photos/products/sunglasses/sun-13.png" alt="">
                                      <div class="product-detail">
                                         <p><a href="">Versace</a></p>
                                         <p>from <span class="span-red">243$</span> <span class="old-price">359$</span></p>
@@ -335,7 +336,7 @@
                               <div class="col-lg-4 col-md-4 col-sm-6 col-6">
                                 <div class="box">
                                    <a href="">
-                                    <img class="img-fluid"  src="assets/photos/products/sunglasses/sun-14.avif" alt="">
+                                    <img class="img-fluid"  src="assets/photos/products/sunglasses/sun-14.png" alt="">
                                     <div class="product-detail">
                                        <p><a href="">Versace</a></p>
                                        <p>from <span class="span-red">243$</span> <span class="old-price">359$</span></p>
@@ -346,7 +347,7 @@
                               <div class="col-lg-4 col-md-4 col-sm-6 col-6">
                                 <div class="box">
                                     <a href="">
-                                        <img class="img-fluid" src="assets/photos/products/sunglasses/sun-15.avif" alt="">
+                                        <img class="img-fluid" src="assets/photos/products/sunglasses/sun-15.png" alt="">
                                         <div class="product-detail">
                                            <p><a href="">Versace</a></p>
                                            <p>from <span class="span-red">243$</span> <span class="old-price">359$</span></p>
@@ -357,7 +358,7 @@
                               <div class="col-lg-4 col-md-4 col-sm-6 col-6">
                                 <div class="box">
                                     <a href="">
-                                        <img class="img-fluid" src="assets/photos/products/sunglasses/sun-16.avif" alt="">
+                                        <img class="img-fluid" src="assets/photos/products/sunglasses/sun-16.png" alt="">
                                      <div class="product-detail">
                                         <p><a href="">Versace</a></p>
                                         <p>from <span class="span-red">243$</span> <span class="old-price">359$</span></p>
@@ -368,7 +369,7 @@
                               <div class="col-lg-4 col-md-4 col-sm-6 col-6">
                                 <div class="box">
                                     <a href="">
-                                        <img class="img-fluid" src="assets/photos/products/sunglasses/sun-17.avif" alt="">
+                                        <img class="img-fluid" src="assets/photos/products/sunglasses/sun-17.png" alt="">
                                      <div class="product-detail">
                                         <p><a href="">Versace</a></p>
                                         <p>from <span class="span-red">243$</span> <span class="old-price">359$</span></p>
@@ -379,7 +380,7 @@
                               <div class="col-lg-4 col-md-4 col-sm-6 col-6">
                                 <div class="box">
                                     <a href="">
-                                        <img class="img-fluid" src="assets/photos/products/sunglasses/sun-18.webp" alt="">
+                                        <img class="img-fluid" src="assets/photos/products/sunglasses/sun-18.png" alt="">
                                      <div class="product-detail">
                                         <p><a href="">Versace</a></p>
                                         <p>from <span class="span-red">243$</span> <span class="old-price">359$</span></p>
@@ -390,7 +391,7 @@
                               <div class="col-lg-4 col-md-4 col-sm-6 col-6">
                                 <div class="box">
                                     <a href="">
-                                        <img class="img-fluid" src="assets/photos/products/sunglasses/sun-19.avif" alt="">
+                                        <img class="img-fluid" src="assets/photos/products/sunglasses/sun-19.png" alt="">
                                      <div class="product-detail">
                                         <p><a href="">Versace</a></p>
                                         <p>from <span class="span-red">243$</span> <span class="old-price">359$</span></p>
@@ -401,7 +402,7 @@
                               <div class="col-lg-4 col-md-4 col-sm-6 col-6">
                                 <div class="box">
                                     <a href="">
-                                        <img class="img-fluid" src="assets/photos/products/sunglasses/sun-20.avif" alt="">
+                                        <img class="img-fluid" src="assets/photos/products/sunglasses/sun-20.png" alt="">
                                      <div class="product-detail">
                                         <p><a href="">Versace</a></p>
                                         <p>from <span class="span-red">243$</span> <span class="old-price">359$</span></p>
@@ -412,7 +413,7 @@
                               <div class="col-lg-4 col-md-4 col-sm-6 col-6">
                                 <div class="box">
                                     <a href="">
-                                        <img class="img-fluid" src="assets/photos/products/sunglasses/sun-21.avif" alt="">
+                                        <img class="img-fluid" src="assets/photos/products/sunglasses/sun-21.png" alt="">
                                      <div class="product-detail">
                                         <p><a href="">Versace</a></p>
                                         <p>from <span class="span-red">243$</span> <span class="old-price">359$</span></p>
@@ -423,7 +424,7 @@
                               <div class="col-lg-4 col-md-4 col-sm-6 col-6">
                                 <div class="box">
                                    <a href="">
-                                    <img class="img-fluid" src="assets/photos/products/sunglasses/sun-22.avif" alt="">
+                                    <img class="img-fluid" src="assets/photos/products/sunglasses/sun-22.png" alt="">
                                     <div class="product-detail">
                                        <p><a href="">Versace</a></p>
                                        <p>from <span class="span-red">243$</span> <span class="old-price">359$</span></p>
@@ -434,7 +435,7 @@
                               <div class="col-lg-4 col-md-4 col-sm-6 col-6">
                                 <div class="box">
                                     <a href="">
-                                        <img class="img-fluid" src="assets/photos/products/sunglasses/sun-23.avif" alt="">
+                                        <img class="img-fluid" src="assets/photos/products/sunglasses/sun-23.png" alt="">
                                      <div class="product-detail">
                                         <p><a href="">Versace</a></p>
                                         <p>from <span class="span-red">243$</span> <span class="old-price">359$</span></p>
@@ -445,7 +446,7 @@
                               <div class="col-lg-4 col-md-4 col-sm-6 col-6">
                                 <div class="box">
                                     <a href="">
-                                        <img class="img-fluid" src="assets/photos/products/sunglasses/sun-24.avif" alt="">
+                                        <img class="img-fluid" src="assets/photos/products/sunglasses/sun-24.png" alt="">
                                      <div class="product-detail">
                                         <p><a href="">Versace</a></p>
                                         <p>from <span class="span-red">243$</span> <span class="old-price">359$</span></p>
@@ -463,6 +464,23 @@
    </section>
             
 
+    <section id="pagination-sec">
+        <div class="container">
+    <div class="pagination p12">
+        <ul>
+        <a href="#"><li>Previous</li></a>
+        <a href="#"><li>1</li></a>
+        <a href="#"><li>2</li></a>
+        <a class="mobile-pagination" href="#"><li>3</li></a>
+        <a class="mobile-pagination" href="#"><li>4</li></a>
+        <a class="mobile-pagination" href="#"><li>5</li></a>
+        <a class="is-active" href="#"><li>6</li></a>
+        <a href="#"><li>Next</li></a>
+        </ul>
+    </div>
+    </div>
+
+    </section>
 
 
 
